fixes fixed nav list alignment

--- a/app/components/NavFixed.css
+++ b/app/components/NavFixed.css
@@ -145,7 +145,6 @@
     }
 
     & .nav-topic {
-      padding: 0 32px 0 var(--gutter-third);
 
       & .topic-link {
 
